fix: light background in dark mode

--- a/resources/monaco/src/style.css
+++ b/resources/monaco/src/style.css
@@ -7,6 +7,10 @@ body {
   overflow: hidden;
 }
 
+body, .monaco-editor, .monaco-editor-background, .monaco-editor .inputarea.ime-input {
+  background-color: var(--vscode-editor-background) !important;
+}
+
 #container {
   height: 100%;
 }
